Fix bugs relate to z-index and give padding to form container in add and edit plan templates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -357,8 +357,6 @@ nav {
 .toast-capper {
     height: 2px;
 }
-
-
 /* ------- CHECKOUT------- */
 .container-form {
     border: 1px solid #827f7f;
@@ -525,10 +523,6 @@ select:invalid {
 }
 
 /* ------- MODAL ------- */
-.modal {
-    z-index: 999;
-}
-
 .modal-header,
 .modal-footer {
     border: none;
@@ -656,7 +650,7 @@ footer div {
         display: flex;
         flex-direction: column;
         align-items: center;
-        z-index: 99;
+        z-index: 100;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
